2008-10-22  Bernd Schmidt  <bernd.schmidt@analog.com>

	* gcc.target/bfin/hisilh.c: New file.
	* gcc.target/bfin/hisilh-O0.c: New file.

	From Mike Frysinger  <michael.frysinger@analog.com>
	* gcc.target/bfin/mcpu-bf522.c: Check SILICON_REVISION is 0x0002.  Invert
	check for __WORKAROUND_RETS when SILICON_REVISION is 0x0002+.
	* gcc.target/bfin/mcpu-bf523.c: Likewise.
	* gcc.target/bfin/mcpu-bf524.c: Likewise.
	* gcc.target/bfin/mcpu-bf525.c: Likewise.
	* gcc.target/bfin/mcpu-bf526.c: Likewise.
	* gcc.target/bfin/mcpu-bf527.c: Likewise.
	* gcc.target/bfin/mcpu-bf531.c: Check SILICON_REVISION is 0x0006.  Invert
	check for __WORKAROUND_RETS when SILICON_REVISION is 0x0006+.
	* gcc.target/bfin/mcpu-bf532.c: Likewise.
	* gcc.target/bfin/mcpu-bf533.c: Likewise.
	* gcc.target/bfin/mcpu-bf538.c: Check SILICON_REVISION is 0x0005.  Invert
	check for __WORKAROUND_RETS when SILICON_REVISION is 0x0005+.
	* gcc.target/bfin/mcpu-bf539.c: Likewise.
	* gcc.target/bfin/mcpu-bf542.c: Check SILICON_REVISION is 0x0002.  Invert
	check for __WORKAROUND_RETS when SILICON_REVISION is 0x0002+.
	* gcc.target/bfin/mcpu-bf544.c: Likewise.
	* gcc.target/bfin/mcpu-bf547.c: Likewise.
	* gcc.target/bfin/mcpu-bf548.c: Likewise.
	* gcc.target/bfin/mcpu-bf549.c: Likewise.
	* gcc.target/bfin/mcpu-bf512.c: New file.
	* gcc.target/bfin/mcpu-bf514.c: Likewise.
	* gcc.target/bfin/mcpu-bf516.c: Likewise.
	* gcc.target/bfin/mcpu-bf518.c: Likewise.

2008-10-22  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/37882
	* gcc.c-torture/execute/pr37882.c: New test.

2008-10-22  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR c/30949
	* gcc.target/i386/sse-vect-types.c: Update.
	* gcc.dg/simd-5.c: Update.
	* gcc.dg/assign-warn-2.c: Update.
	* gcc.dg/simd-2.c: Update.
	* gcc.dg/simd-6.c: Update.
	* gcc.dg/assign-warn-1.c: Update.
	* gcc.dg/dfp/composite-type.c: Update.
	* gcc.dg/simd-1.c: Update.
	* gcc.dg/pr36997.c: Update.

2008-10-21  Paul Thomas  <pault@gcc.gnu.org>

	PR libfortran/36795