@@ -1,3 +1,10 @@
+2008-10-22  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR libfortran/37707
+	* gfortran.dg/namelist_18.f90: Update test.
+	* gfortran.dg/namelist_55.f90: New test.
+	* gfortran.dg/namelist_56.f90: New test.
+
 2008-10-22  Bernd Schmidt  <bernd.schmidt@analog.com>
 
 	* gcc.target/bfin/hisilh.c: New file.
